--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSDK Image Editor - jQuery</title>
+	<title>Mind Designer</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
@@ -11,8 +11,7 @@
 
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<h1>Creative SDK Image Editor</h1>
-			<h2>+ HTML Drag and Drop API</h2>
+			<h1>Mind Designer</h1>
 		</div>
 	</div>
 
