--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<h1>Mind Designer</h1>
-		</div>
+			<img src="https://static.wixstatic.com/media/131921_f77242cd09f14c37914ad3763a154768~mv2.png/v1/fill/w_600,h_126,al_c,usm_0.66_1.00_0.01/131921_f77242cd09f14c37914ad3763a154768~mv2.png
+" alt="Mind Designer" style="width:600px;height:126px;">
+
+					</div>
 	</div>
 
 	<div class="row">
@@ -36,11 +38,6 @@
 				<div class="col-md-12">
 					<button id="clear-image-button" class="btn btn-danger btn-block button-panel">
 						<span class="glyphicon glyphicon-remove pull-left padleft" aria-hidden="true"></span> Clear
-					</button>
-				</div>
-				<div class="col-md-12">
-					<button id="about-this-demo-button" class="btn btn-link btn-block button-panel" data-toggle="modal" data-target="#more-info-modal">
-						About this demo...
 					</button>
 				</div>
 			</div>
@@ -67,26 +64,6 @@
 	        		<h4 class="modal-title">About this demo</h4>
 	      		</div>
 
-	      		<div class="modal-body">
-	        		<h3>What is this?</h3>
-					<p>This is a developer demo of the <a href="https://creativesdk.adobe.com/">Adobe Creative SDK</a> Image Editor for Web.</p>
-					<p>You can learn about the Creative SDK at <a href="https://creativesdk.adobe.com/">creativesdk.com</a>.</p>
-					
-					<h3>Where is the repo?</h3>
-					<p>You can <a href="https://github.com/CreativeSDK/web-image-editor-drag-and-drop">fork this sample app on GitHub</a>, or see our <a href="https://github.com/CreativeSDK/web-getting-started-samples">Getting Started sample app repos for Web</a>.</p>
-					<p>We have even more sample repos for Web, Android, and iOS on <a href="https://github.com/CreativeSDK">the Creative SDK GitHub org</a>.</p>
-
-					<h3>Community contributors</h3>
-					<p>Our thanks to <a href="https://github.com/CreativeSDK/web-image-editor-drag-and-drop/graphs/contributors">our GitHub community contributors</a> for their contributions to this sample app!</p>
-
-					<ul>
-						<li><a href="https://github.com/wensontsai">Wenson Tsai</a></li>
-						<li><a href="https://github.com/cgalbiati">Chandra Galbiati</a></li>
-						<li><a href="https://github.com/Dubsta">Michael Atkinson</a></li>
-					</ul>
-
-					<p>Want to contribute? <a href="https://github.com/CreativeSDK/web-image-editor-drag-and-drop">See the readme</a> to learn where to find open tickets and how to submit your pull request.</p>
-	      		</div>
 
 	      		<div class="modal-footer">
 	        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
