--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<img src="https://static.wixstatic.com/media/131921_f77242cd09f14c37914ad3763a154768~mv2.png/v1/fill/w_600,h_126,al_c,usm_0.66_1.00_0.01/131921_f77242cd09f14c37914ad3763a154768~mv2.png
-" alt="Mind Designer" style="width:600px;height:126px;">
+			<img src="https://static.wixstatic.com/media/131921_ec78db523e5b485e88002db471abd80d~mv2.png/v1/fill/w_750,h_208,al_c,lg_1/131921_ec78db523e5b485e88002db471abd80d~mv2.png
+" alt="Mind Designer" style="width:750px;height:208px;">
 
 					</div>
 	</div>
 
+	<a href="http://www.influencer.getmindfuel.com/animate">
+  <img src="https://static.wixstatic.com/media/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png" alt="MIND FUEL Animator" style="width:750px;height:93px;border:0;">
+</a>
+	
+		<a href="http://www.influencer.getmindfuel.com/merch-maker">
+  <img src="https://static.wixstatic.com/media/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png" alt="MIND FUEL Merch Maker" style="width:750px;height:93px;border:0;">
+</a>
+	
 	<div class="row">
 		<div class="col-md-2">
 			<div class="row">
