--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="container">
 
-	<div class="row">
+<center>	<div class="row">
 		<div class="col-md-12 text-center">
 			<img src="https://static.wixstatic.com/media/131921_ec78db523e5b485e88002db471abd80d~mv2.png/v1/fill/w_750,h_208,al_c,lg_1/131921_ec78db523e5b485e88002db471abd80d~mv2.png
 " alt="Mind Designer" style="width:750px;height:208px;">
@@ -17,12 +17,12 @@
 					</div>
 	</div>
 	<a href="http://www.influencer.getmindfuel.com/animate">
-  <img src="https://static.wixstatic.com/media/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png" alt="MIND FUEL Animator" style="width:250px;height:31px;border:0;">
+  <img src="https://static.wixstatic.com/media/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png" alt="MIND FUEL Animator" style="width:375px;height:47px;border:0;">
 </a>
 	
 		<a href="http://www.influencer.getmindfuel.com/merch-maker">
-  <img src="https://static.wixstatic.com/media/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png" alt="MIND FUEL Merch Maker" style="width:250px;height:31px;border:0;">
-</a>
+  <img src="https://static.wixstatic.com/media/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png" alt="MIND FUEL Merch Maker" style="width:375px;height:47px;border:0;">
+</a> </center>
 	
 	<div class="row">
 		<div class="col-md-2">
@@ -60,7 +60,6 @@
 		</div>
 
 	</div> <!-- end .row -->
-
 
 	<div id="more-info-modal" class="modal fade" tabindex="-1" role="dialog">
 		<div class="modal-dialog">
