--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 					</div>
 	</div>
 	<a href="http://www.influencer.getmindfuel.com/animate">
-  <img src="https://static.wixstatic.com/media/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_17eb6dd3a9dc4e828043b495f6a106c7~mv2.png" alt="MIND FUEL Animator" style="width:375px;height:47px;border:0;">
+  <img src="https://static.wixstatic.com/media/131921_75c23e7683064cafbc55a63950cf40e4~mv2.png/v1/fill/w_375,h_65,al_c,usm_0.66_1.00_0.01/131921_75c23e7683064cafbc55a63950cf40e4~mv2.png" alt="MIND FUEL Animator" style="width:300px;height:52px;border:0;">
 </a>
 	
 		<a href="http://www.influencer.getmindfuel.com/merch-maker">
-  <img src="https://static.wixstatic.com/media/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png/v1/fill/w_750,h_93,al_c,lg_1/131921_a8f820aee2d5416eb6aa10624c99085c~mv2.png" alt="MIND FUEL Merch Maker" style="width:375px;height:47px;border:0;">
+  <img src="https://static.wixstatic.com/media/131921_028ce2227a004dabb99e4df318dffea5~mv2.png/v1/fill/w_384,h_65,al_c,usm_0.66_1.00_0.01/131921_028ce2227a004dabb99e4df318dffea5~mv2.png" alt="MIND FUEL Merch Maker" style="width:302px;height:52px;border:0;">
 </a> </center>
 	
 	<div class="row">
