--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <center>	<div class="row">
 		<div class="col-md-12 text-center">
-			<img src="https://static.wixstatic.com/media/131921_ec78db523e5b485e88002db471abd80d~mv2.png/v1/fill/w_750,h_208,al_c,lg_1/131921_ec78db523e5b485e88002db471abd80d~mv2.png
-" alt="Mind Designer" style="width:750px;height:208px;">
+			<img src="https://static.wixstatic.com/media/131921_4dac903f4fd24d379dfce507578e552f~mv2.png/v1/fill/w_600,h_113,al_c/131921_4dac903f4fd24d379dfce507578e552f~mv2.png
+" alt="Mind Designer" style="width:600px;height:113px;">
 
 					</div>
 	<div class="row">
